--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# Logs
-logs
-*.log
+# dependencies
+node_modules/
+
+# build output
+dist/
+build/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
+# editor settings
+.vscode/
 !.vscode/extensions.json
-.idea
+!.vscode/launch.json
+
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# misc
+*.tgz
+package-lock.json
+yarn.lock
